Adapting todos app to use backbone-couchdb.js adapter (See notes for nginx setup)

--- a/examples/todos/index.html
+++ b/examples/todos/index.html
@@ -3,13 +3,15 @@
 
   <head>
     <title>Backbone Demo: Todos</title>
-    <link href="todos.css" media="all" rel="stylesheet" type="text/css"/>
-    <script src="../../test/vendor/json2.js"></script>
-    <script src="../../test/vendor/jquery-1.4.2.js"></script>
-    <script src="../../test/vendor/underscore-1.1.0.js"></script>
-    <script src="../../backbone.js"></script>
-    <script src="../backbone-localstorage.js"></script>
-    <script src="todos.js"></script>
+    <link href="/todos.css" media="all" rel="stylesheet" type="text/css"/>
+    <script src="/json2.js"></script>
+    <script src="/jquery-1.4.2.js"></script>
+    <script src="/jquery.couch.js"></script>
+    <script src="/underscore-1.1.0.js"></script>
+    <script src="/backbone.js"></script>
+    <script src="/backbone-couchdb.js"></script>
+    <!-- <script src="/backbone-localstorage.js"></script> -->
+    <script src="/todos.js"></script>
   </head>
 
   <body>
